<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".SignUpActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_signup_128"
        tools:srcCompat="@drawable/ic_signup_128" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:id="@+id/edtName"
        android:hint="@string/nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/email" />

    <!-- Container para a senha com botão de visibilidade -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:hint="@string/pwd"
            android:inputType="textPassword" />

        <ImageButton
            android:id="@+id/btnTogglePwdVisibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_visibility_off_24"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <!-- Container para a confirmação de senha com botão de visibilidade -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPwdConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:hint="@string/confirm_pwd"
            android:inputType="textPassword" />

        <ImageButton
            android:id="@+id/btnTogglePwdConfirmationVisibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_visibility_off_24"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="16dp"
        android:text="@string/signupBtn"
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_height="wrap_content" />

</LinearLayout>
